chore: support more params on the api
