# api/api.pb.go
@@ -6,14 +6,13 @@ package api
 import (
 	context "context"
 	fmt "fmt"
-	math "math"
-
 	proto "github.com/golang/protobuf/proto"
 	_ "google.golang.org/genproto/googleapis/api/annotations"
 	httpbody "google.golang.org/genproto/googleapis/api/httpbody"
 	grpc "google.golang.org/grpc"
 	codes "google.golang.org/grpc/codes"
 	status "google.golang.org/grpc/status"
+	math "math"
 )
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -30,6 +29,9 @@ const _ = proto.ProtoPackageIsVersion3 // please upgrade the proto package
 type SnapshotRequest struct {
 	Url                  string   `protobuf:"bytes,1,opt,name=url,proto3" json:"url,omitempty"`
 	WaitPeriod           int32    `protobuf:"varint,2,opt,name=wait_period,json=waitPeriod,proto3" json:"wait_period,omitempty"`
+	Width                int64    `protobuf:"varint,3,opt,name=width,proto3" json:"width,omitempty"`
+	Height               int64    `protobuf:"varint,4,opt,name=height,proto3" json:"height,omitempty"`
+	Scale                float32  `protobuf:"fixed32,5,opt,name=scale,proto3" json:"scale,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -74,69 +76,51 @@ func (m *SnapshotRequest) GetWaitPeriod() int32 {
 	return 0
 }
 
-type SnapshotResponse struct {
-	SnapshotUrl          string   `protobuf:"bytes,1,opt,name=snapshot_url,json=snapshotUrl,proto3" json:"snapshot_url,omitempty"`
-	XXX_NoUnkeyedLiteral struct{} `json:"-"`
-	XXX_unrecognized     []byte   `json:"-"`
-	XXX_sizecache        int32    `json:"-"`
-}
-
-func (m *SnapshotResponse) Reset()         { *m = SnapshotResponse{} }
-func (m *SnapshotResponse) String() string { return proto.CompactTextString(m) }
-func (*SnapshotResponse) ProtoMessage()    {}
-func (*SnapshotResponse) Descriptor() ([]byte, []int) {
-	return fileDescriptor_1b40cafcd4234784, []int{1}
-}
-
-func (m *SnapshotResponse) XXX_Unmarshal(b []byte) error {
-	return xxx_messageInfo_SnapshotResponse.Unmarshal(m, b)
-}
-func (m *SnapshotResponse) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
-	return xxx_messageInfo_SnapshotResponse.Marshal(b, m, deterministic)
-}
-func (m *SnapshotResponse) XXX_Merge(src proto.Message) {
-	xxx_messageInfo_SnapshotResponse.Merge(m, src)
-}
-func (m *SnapshotResponse) XXX_Size() int {
-	return xxx_messageInfo_SnapshotResponse.Size(m)
-}
-func (m *SnapshotResponse) XXX_DiscardUnknown() {
-	xxx_messageInfo_SnapshotResponse.DiscardUnknown(m)
-}
-
-var xxx_messageInfo_SnapshotResponse proto.InternalMessageInfo
-
-func (m *SnapshotResponse) GetSnapshotUrl() string {
+func (m *SnapshotRequest) GetWidth() int64 {
 	if m != nil {
-		return m.SnapshotUrl
+		return m.Width
 	}
-	return ""
+	return 0
+}
+
+func (m *SnapshotRequest) GetHeight() int64 {
+	if m != nil {
+		return m.Height
+	}
+	return 0
+}
+
+func (m *SnapshotRequest) GetScale() float32 {
+	if m != nil {
+		return m.Scale
+	}
+	return 0
 }
 
 func init() {
 	proto.RegisterType((*SnapshotRequest)(nil), "api.SnapshotRequest")
-	proto.RegisterType((*SnapshotResponse)(nil), "api.SnapshotResponse")
 }
 
 func init() { proto.RegisterFile("api/api.proto", fileDescriptor_1b40cafcd4234784) }
 
 var fileDescriptor_1b40cafcd4234784 = []byte{
-	// 231 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xe2, 0xe2, 0x4d, 0x2c, 0xc8, 0xd4,
-	0x4f, 0x2c, 0xc8, 0xd4, 0x2b, 0x28, 0xca, 0x2f, 0xc9, 0x17, 0x62, 0x4e, 0x2c, 0xc8, 0x94, 0x92,
-	0x49, 0xcf, 0xcf, 0x4f, 0xcf, 0x49, 0xd5, 0x07, 0x4b, 0xe5, 0xe5, 0xe5, 0x97, 0x24, 0x96, 0x64,
-	0xe6, 0xe7, 0x15, 0x43, 0x94, 0x48, 0x49, 0x22, 0xc9, 0x66, 0x94, 0x94, 0x14, 0x24, 0xe5, 0xa7,
-	0x54, 0x42, 0xa4, 0x94, 0x5c, 0xb8, 0xf8, 0x83, 0xf3, 0x12, 0x0b, 0x8a, 0x33, 0xf2, 0x4b, 0x82,
-	0x52, 0x0b, 0x4b, 0x53, 0x8b, 0x4b, 0x84, 0x04, 0xb8, 0x98, 0x4b, 0x8b, 0x72, 0x24, 0x18, 0x15,
-	0x18, 0x35, 0x38, 0x83, 0x40, 0x4c, 0x21, 0x79, 0x2e, 0xee, 0xf2, 0xc4, 0xcc, 0x92, 0xf8, 0x82,
-	0xd4, 0xa2, 0xcc, 0xfc, 0x14, 0x09, 0x26, 0x05, 0x46, 0x0d, 0xd6, 0x20, 0x2e, 0x90, 0x50, 0x00,
-	0x58, 0x44, 0xc9, 0x94, 0x4b, 0x00, 0x61, 0x4a, 0x71, 0x41, 0x7e, 0x5e, 0x71, 0xaa, 0x90, 0x22,
-	0x17, 0x4f, 0x31, 0x54, 0x2c, 0x1e, 0x61, 0x1e, 0x37, 0x4c, 0x2c, 0xb4, 0x28, 0xc7, 0x28, 0x9c,
-	0x8b, 0x3d, 0x34, 0xc8, 0x07, 0xa4, 0x53, 0xc8, 0x87, 0x8b, 0x03, 0x66, 0x82, 0x90, 0x88, 0x1e,
-	0xc8, 0x77, 0x68, 0xce, 0x92, 0x12, 0xd1, 0x83, 0xf8, 0x02, 0x2c, 0xe9, 0x51, 0x52, 0x52, 0xe0,
-	0x94, 0x9f, 0x52, 0xa9, 0x24, 0xd2, 0x74, 0xf9, 0xc9, 0x64, 0x26, 0x3e, 0x21, 0x1e, 0xfd, 0x32,
-	0x43, 0x7d, 0x98, 0xd9, 0x49, 0x6c, 0x60, 0xcf, 0x19, 0x03, 0x02, 0x00, 0x00, 0xff, 0xff, 0x73,
-	0x53, 0xb8, 0x2e, 0x2b, 0x01, 0x00, 0x00,
+	// 251 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x5c, 0x8f, 0xcd, 0x4a, 0xc4, 0x30,
+	0x14, 0x85, 0x49, 0x6b, 0x47, 0xbd, 0xfe, 0x12, 0x8a, 0xd4, 0x22, 0x58, 0x66, 0xd5, 0x55, 0x8b,
+	0xfa, 0x06, 0xae, 0x5c, 0xcc, 0x42, 0x22, 0xe2, 0x52, 0x32, 0x36, 0x34, 0x81, 0xd2, 0x1b, 0x9b,
+	0x3b, 0x0e, 0xb3, 0x75, 0xe5, 0xde, 0x47, 0xf3, 0x15, 0x7c, 0x10, 0x49, 0x32, 0x82, 0xb8, 0xbb,
+	0xe7, 0x7c, 0xe7, 0xc2, 0x39, 0x70, 0x24, 0xad, 0x69, 0xa5, 0x35, 0x8d, 0x9d, 0x90, 0x90, 0xa7,
+	0xd2, 0x9a, 0xf2, 0xa2, 0x47, 0xec, 0x07, 0xd5, 0x06, 0x34, 0x8e, 0x48, 0x92, 0x0c, 0x8e, 0x2e,
+	0x46, 0xca, 0xf3, 0x3f, 0x54, 0x13, 0xd9, 0x25, 0x76, 0x9b, 0x88, 0xe6, 0x1f, 0x0c, 0x4e, 0x1e,
+	0x46, 0x69, 0x9d, 0x46, 0x12, 0xea, 0x75, 0xa5, 0x1c, 0xf1, 0x53, 0x48, 0x57, 0xd3, 0x50, 0xb0,
+	0x8a, 0xd5, 0xfb, 0xc2, 0x9f, 0xfc, 0x12, 0x0e, 0xd6, 0xd2, 0xd0, 0xb3, 0x55, 0x93, 0xc1, 0xae,
+	0x48, 0x2a, 0x56, 0x67, 0x02, 0xbc, 0x75, 0x1f, 0x1c, 0x9e, 0x43, 0xb6, 0x36, 0x1d, 0xe9, 0x22,
+	0xad, 0x58, 0x9d, 0x8a, 0x28, 0xf8, 0x19, 0xcc, 0xb4, 0x32, 0xbd, 0xa6, 0x62, 0x27, 0xd8, 0x5b,
+	0xe5, 0xd3, 0xee, 0x45, 0x0e, 0xaa, 0xc8, 0x2a, 0x56, 0x27, 0x22, 0x8a, 0xeb, 0x27, 0xd8, 0xf5,
+	0x4d, 0x1e, 0xc5, 0x82, 0x2f, 0x60, 0xef, 0xb7, 0x14, 0xcf, 0x1b, 0xbf, 0xf5, 0x5f, 0xc7, 0x32,
+	0x6f, 0xe2, 0xa6, 0x00, 0xef, 0x88, 0xec, 0x2d, 0x76, 0x9b, 0x79, 0xfe, 0xfe, 0xf5, 0xfd, 0x99,
+	0x1c, 0xf3, 0xc3, 0xf6, 0xed, 0xaa, 0x75, 0xdb, 0x97, 0xe5, 0x2c, 0x4c, 0xbd, 0xf9, 0x09, 0x00,
+	0x00, 0xff, 0xff, 0x6f, 0xfe, 0xd3, 0x93, 0x39, 0x01, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -154,15 +138,15 @@ type SnapURLClient interface {
 	Snapshot(ctx context.Context, in *SnapshotRequest, opts ...grpc.CallOption) (*httpbody.HttpBody, error)
 }
 
-type uRLSnapClient struct {
+type snapURLClient struct {
 	cc *grpc.ClientConn
 }
 
 func NewSnapURLClient(cc *grpc.ClientConn) SnapURLClient {
-	return &uRLSnapClient{cc}
+	return &snapURLClient{cc}
 }
 
-func (c *uRLSnapClient) Snapshot(ctx context.Context, in *SnapshotRequest, opts ...grpc.CallOption) (*httpbody.HttpBody, error) {
+func (c *snapURLClient) Snapshot(ctx context.Context, in *SnapshotRequest, opts ...grpc.CallOption) (*httpbody.HttpBody, error) {
 	out := new(httpbody.HttpBody)
 	err := c.cc.Invoke(ctx, "/api.SnapURL/Snapshot", in, out, opts...)
 	if err != nil {
